@@ -2915,7 +2915,11 @@ $wgSlaveLagCritical = 30;
 /**
  * Parser configuration. Associative array with the following members:
  *
- *     class        The class name
+ *  class             The class name
+ *  preprocessorClass The preprocessor class, by default it is Preprocessor_Hash.
+ *                    Preprocessor_DOM is also available and better tested, but
+ *                    it has a dependency of the dom module of PHP.
+ *                    It has no effect with Parser_OldPP parser class.
  * 
  * The entire associative array will be passed through to the constructor as 
  * the first parameter. Note that only Setup.php can use this variable -- 
@@ -2926,6 +2930,7 @@ $wgSlaveLagCritical = 30;
  */
 $wgParserConf = array( 
 	'class' => 'Parser',
+	'preprocessorClass' => 'Preprocessor_Hash',
 );
 
 /**
