@@ -12,6 +12,7 @@ Changes since 1.12.0:
 * (bug 12077) Fix HTML nesting for TOC
 * (bug 13532) Use proper timestamp call when reverting images
 * (bug 13649) Bad call to wfTimestamp()
+* (bug 13770) Use Preprocessor_Hash by default to avoid missing DOM module errors
 
 
 == MediaWiki 1.12.0 ==
